--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -1,2 +1,3 @@
 // @import url('https://fonts.googleapis.com/css?family=Roboto');
-@import 'vendor/reset';
+// @import 'vendor/reset';
+@import 'spinner'
